# skipjack_rs

./: Cargo.toml  README.md
benches/: decrypt.rs  encrypt.rs
src/: lib.rs  utils.rs
tests/: mod.rs
